@@ -152,11 +152,9 @@ bool OEImage::validatePNG(FILE *fp)
 
 void OEImage::update()
 {
-	int bytesPerPixel = 0;
+	int bytesPerPixel = 1;
 	
-	if (format == OEIMAGE_FORMAT_LUMINANCE)
-		bytesPerPixel = 1;
-	else if (format == OEIMAGE_FORMAT_RGB)
+	if (format == OEIMAGE_FORMAT_RGB)
 		bytesPerPixel = 3;
 	else if (format == OEIMAGE_FORMAT_RGBA)
 		bytesPerPixel = 4;
