@@ -37,6 +37,12 @@ typedef struct
 typedef enum
 {
 	OEIMAGE_FORMAT_LUMINANCE,
+	OEIMAGE_FORMAT_NTSC1,
+	OEIMAGE_FORMAT_NTSC2,
+	OEIMAGE_FORMAT_PAL1,
+	OEIMAGE_FORMAT_PAL2,
+	OEIMAGE_FORMAT_PAL3,
+	OEIMAGE_FORMAT_PAL4,
 	OEIMAGE_FORMAT_RGB,
 	OEIMAGE_FORMAT_RGBA,
 } OEImageFormat;
