@@ -49,10 +49,10 @@ bool Monitor::setValue(string name, string value)
 	{
 		if (value == "Monochrome")
 			configuration.decoder = CANVAS_DECODER_MONOCHROME;
-		else if (value == "NTSC Y'UV")
-			configuration.decoder = CANVAS_DECODER_NTSC_YUV;
-		else if (value == "NTSC Y'IQ")
-			configuration.decoder = CANVAS_DECODER_NTSC_YIQ;
+		else if (value == "Y'UV")
+			configuration.decoder = CANVAS_DECODER_YUV;
+		else if (value == "Y'IQ")
+			configuration.decoder = CANVAS_DECODER_YIQ;
 		else if (value == "CXA2025AS")
 			configuration.decoder = CANVAS_DECODER_CXA2025AS;
 		else
@@ -111,10 +111,10 @@ bool Monitor::getValue(string name, string& value)
 	{
 		if (configuration.decoder == CANVAS_DECODER_MONOCHROME)
 			value = "Monochrome";
-		else if (configuration.decoder == CANVAS_DECODER_NTSC_YUV)
-			value = "NTSC Y'UV";
-		else if (configuration.decoder == CANVAS_DECODER_NTSC_YIQ)
-			value = "NTSC Y'IQ";
+		else if (configuration.decoder == CANVAS_DECODER_YUV)
+			value = "Y'UV";
+		else if (configuration.decoder == CANVAS_DECODER_YIQ)
+			value = "Y'IQ";
 		else if (configuration.decoder == CANVAS_DECODER_CXA2025AS)
 			value = "CXA2025AS";
 		else
