@@ -32,7 +32,6 @@ typedef enum
 
 typedef enum
 {
-	CANVAS_SYSTEMKEYBOARD_DID_CHANGE,
 	CANVAS_KEYBOARD_DID_CHANGE,
 	CANVAS_UNICODEKEYBOARD_DID_CHANGE,
 	CANVAS_POINTER_DID_CHANGE,
@@ -60,8 +59,8 @@ typedef enum
 {
 	CANVAS_DECODER_MONOCHROME,
 	CANVAS_DECODER_RGB,
-	CANVAS_DECODER_NTSC_YUV,
-	CANVAS_DECODER_NTSC_YIQ,
+	CANVAS_DECODER_YUV,
+	CANVAS_DECODER_YIQ,
 	CANVAS_DECODER_CXA2025AS,
 } CanvasDecoder;
 
@@ -123,48 +122,6 @@ typedef struct
 #define CANVAS_JOYSTICK_BUTTON_NUM	16
 #define CANVAS_JOYSTICK_HAT_NUM		4
 #define CANVAS_JOYSTICK_RAXIS_NUM	4
-
-typedef enum
-{
-	CANVAS_S_POWERDOWN = 0x81,
-	CANVAS_S_SLEEP,
-	CANVAS_S_WAKEUP,
-	CANVAS_S_CONTEXT,
-	CANVAS_S_MAINMENU,
-	CANVAS_S_APPMENU,
-	CANVAS_S_MENUHELP,
-	CANVAS_S_MENUEXIT,
-	CANVAS_S_MENUSELECT,
-	CANVAS_S_MENURIGHT,
-	CANVAS_S_MENULEFT,
-	CANVAS_S_MENUUP,
-	CANVAS_S_MENUDOWN,
-	CANVAS_S_COLDRESTART,
-	CANVAS_S_WARMRESTART,
-	CANVAS_S_DPADUP,
-	CANVAS_S_DPADDOWN,
-	CANVAS_S_DPADRIGHT,
-	CANVAS_S_DPADLEFT,
-	
-	CANVAS_S_DOCK = 0xa0,
-	CANVAS_S_UNDOCK,
-	CANVAS_S_SETUP,
-	CANVAS_S_BREAK,
-	CANVAS_S_DEBUGGERBREAK,
-	CANVAS_S_APPLICATIONBREAK,
-	CANVAS_S_APPLICATIONDEBUGGERBREAK,
-	CANVAS_S_SPEAKERMUTE,
-	CANVAS_S_HIBERNATE,
-	
-	CANVAS_S_DISPLAYINVERT = 0xb0,
-	CANVAS_S_DISPLAYINTERNAL,
-	CANVAS_S_DISPLAYEXTERNAL,
-	CANVAS_S_DISPLAYBOTH,
-	CANVAS_S_DISPLAYDUAL,
-	CANVAS_S_DISPLAYTOGGLEINTEXT,
-	CANVAS_S_DISPLAYSWAPPRIMARYSECONDARY,
-	CANVAS_S_DISPLAYLCDAUTOSCALE,
-} CanvasSystemUsageIds;
 
 typedef enum {
 	CANVAS_K_A = 0x04,
