@@ -250,16 +250,72 @@
 		return nil;
 	
 	[item autorelease];
-	if ([ident isEqualToString:@"Library"])
+	if ([ident isEqualToString:@"Power Down"])
 	{
-		[item setLabel:NSLocalizedString(@"Hardware Library",
-										 @"Emulation Toolbar Label.")];
-		[item setPaletteLabel:NSLocalizedString(@"Hardware Library",
-												@"Emulation Toolbar Palette Label.")];
-		[item setToolTip:NSLocalizedString(@"Show or hide the hardware library.",
-										   @"Emulation Toolbar Tool Tip.")];
-		[item setImage:[NSImage imageNamed:@"IconLibrary.png"]];
-		[item setAction:@selector(toggleLibrary:)];
+		[item setLabel:NSLocalizedString(@"Power Down",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Power Down",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Initiate power-down.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconPowerDown.png"]];
+		[item setAction:@selector(systemPowerDown:)];
+	}
+	else if ([ident isEqualToString:@"Sleep"])
+	{
+		[item setLabel:NSLocalizedString(@"Sleep",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Sleep",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Initiate low power mode.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconSleep.png"]];
+		[item setAction:@selector(systemSleep:)];
+	}
+	else if ([ident isEqualToString:@"Wake Up"])
+	{
+		[item setLabel:NSLocalizedString(@"Wake Up",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Wake Up",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Initiate full power state.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconWakeUp.png"]];
+		[item setAction:@selector(systemWakeUp:)];
+	}
+	else if ([ident isEqualToString:@"Cold Restart"])
+	{
+		[item setLabel:NSLocalizedString(@"Cold Restart",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Cold Restart",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Restart the system at the most "
+										   "primitive level.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconColdRestart.png"]];
+		[item setAction:@selector(systemColdRestart:)];
+	}
+	else if ([ident isEqualToString:@"Warm Restart"])
+	{
+		[item setLabel:NSLocalizedString(@"Warm Restart",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Warm Restart",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Restart the operating system.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconWarmRestart.png"]];
+		[item setAction:@selector(systemWarmRestart:)];
+	}
+	else if ([ident isEqualToString:@"Debugger Break"])
+	{
+		[item setLabel:NSLocalizedString(@"Debugger Break",
+										 @"Canvas Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Debugger Break",
+												@"Canvas Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Break into the operating system debugger.",
+										   @"Canvas Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconDebuggerBreak.png"]];
+		[item setAction:@selector(systemDebuggerBreak:)];
 	}
 	else if ([ident isEqualToString:@"AudioControls"])
 	{
@@ -272,6 +328,17 @@
 		[item setImage:[NSImage imageNamed:@"IconAudio.png"]];
 		[item setAction:@selector(toggleAudioControls:)];
 	}
+	else if ([ident isEqualToString:@"Library"])
+	{
+		[item setLabel:NSLocalizedString(@"Hardware Library",
+										 @"Emulation Toolbar Label.")];
+		[item setPaletteLabel:NSLocalizedString(@"Hardware Library",
+												@"Emulation Toolbar Palette Label.")];
+		[item setToolTip:NSLocalizedString(@"Show or hide the hardware library.",
+										   @"Emulation Toolbar Tool Tip.")];
+		[item setImage:[NSImage imageNamed:@"IconLibrary.png"]];
+		[item setAction:@selector(toggleLibrary:)];
+	}
 	
 	return item;
 }
@@ -279,6 +346,9 @@
 - (NSArray *)toolbarDefaultItemIdentifiers:(NSToolbar *)toolbar
 {
 	return [NSArray arrayWithObjects:
+			@"Power Down",
+			@"Sleep",
+			@"Wake Up",
 			NSToolbarFlexibleSpaceItemIdentifier,
 			@"Library",
 			nil];
@@ -287,8 +357,14 @@
 - (NSArray *)toolbarAllowedItemIdentifiers:(NSToolbar *)toolbar
 {
 	return [NSArray arrayWithObjects:
-			@"Library",
+			@"Power Down",
+			@"Sleep",
+			@"Wake Up",
+			@"Cold Restart",
+			@"Warm Restart",
+			@"Debugger Break",
 			@"AudioControls",
+			@"Library",
 			NSToolbarSeparatorItemIdentifier,
 			NSToolbarSpaceItemIdentifier,
 			NSToolbarFlexibleSpaceItemIdentifier,
@@ -692,6 +768,48 @@ dataCellForTableColumn:(NSTableColumn *)tableColumn
 - (IBAction)delete:(id)sender
 {
 	// Remove device
+}
+
+// System events
+
+- (void)systemPowerDown:(id)sender
+{
+//	[[self document] sendSystemEvent:SYSTEMEVENT_POWERDOWN toDevice:];
+}
+
+- (void)systemSleep:(id)sender
+{
+	[[self document] lockEmulation];
+	//	((OpenGLHAL *)canvas)->sendSystemEvent(SYSTEMEVENT_SLEEP);
+	[[self document] unlockEmulation];
+}
+
+- (void)systemWakeUp:(id)sender
+{
+	[[self document] lockEmulation];
+	//	((OpenGLHAL *)canvas)->sendSystemEvent(SYSTEMEVENT_WAKEUP);
+	[[self document] unlockEmulation];
+}
+
+- (void)systemColdRestart:(id)sender
+{
+	[[self document] lockEmulation];
+	//	((OpenGLHAL *)canvas)->sendSystemEvent(SYSTEMEVENT_COLDRESTART);
+	[[self document] unlockEmulation];
+}
+
+- (void)systemWarmRestart:(id)sender
+{
+	[[self document] lockEmulation];
+	//	((OpenGLHAL *)canvas)->sendSystemEvent(SYSTEMEVENT_WARMRESTART);
+	[[self document] unlockEmulation];
+}
+
+- (void)systemDebuggerBreak:(id)sender
+{
+	[[self document] lockEmulation];
+	//	((OpenGLHAL *)canvas)->sendSystemEvent(SYSTEMEVENT_DEBUGGERBREAK);
+	[[self document] unlockEmulation];
 }
 
 @end
